--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 		</head>
 		<body>
 			<center>
-				<h1>Welcome to DevOps</h1>
+				<h1>Welcome to DevOps from Dev2</h1>
 				</center>
 				</body>
 				</html>
